<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_height"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/forgot_password_email"
        style="@style/edit_text_style"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/forgot_password_reset"
        style="@style/rounded_button"
        android:layout_below="@+id/forgot_password_email"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:textSize="18sp" />

    <Button
        android:id="@+id/forgot_password_cancel"
        style="@style/rounded_button_with_border"
        android:layout_below="@+id/forgot_password_reset"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel"
        />

</RelativeLayout>
