<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity" >


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_app_bar_layout">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/main_app_bar_layout" />

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_tab_layout"
            android:background="@color/dark_blue"
            app:tabTextColor="@color/white"
            app:tabRippleColor="@color/colorPrimaryDark"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabIndicatorColor="@color/light_orange"
            app:tabIndicatorHeight="5dp">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_requests_item"
                android:text="@string/requests" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_chats_item"
                android:text="@string/chats"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_friends_item"
                android:text="@string/friends"/>

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_app_bar_layout">


    </android.support.v4.view.ViewPager>


</RelativeLayout>
