<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProfileActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="283dp"
        android:layout_height="350dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/profile_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/default_profile_pic" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/default_username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profile_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="90dp"
        android:ellipsize="marquee"
        android:fontFamily="sans-serif-medium"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/default_description"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username" />

    <TextView
        android:id="@+id/profile_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="105dp"
        android:fontFamily="sans-serif-medium"
        android:singleLine="true"
        android:text="@string/profile_stats"
        android:textColor="@color/dark_pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_description" />

    <Button
        android:id="@+id/profile_send_friend_request"
        style="@style/rounded_button"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="77dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="91dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/send_friend_request"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_stats"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/profile_unfriend_friend"
        style="@style/rounded_button_with_border"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="77dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="29dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/decline_friend_request"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_send_friend_request" />
</android.support.constraint.ConstraintLayout>
