<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AuthActivity"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/auth_welcome_text"
        android:layout_centerInParent="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/app_icon"
        app:layout_constraintBottom_toTopOf="@+id/auth_welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/auth_tag_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/auth_tag_line"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="117dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tag_line"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/auth_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_welcome_text" />

    <Button
        android:id="@+id/auth_register_button"
        style="@style/rounded_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/auth_welcome_text"
        android:layout_marginStart="116dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_rect_button_border"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_login_button" />

    <Button
        android:id="@+id/auth_login_button"
        style="@style/rounded_button_with_border"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/auth_register_button"
        android:layout_marginStart="116dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_rect_button"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-black"
        android:text="@string/auth_login_button"
        android:textAllCaps="true"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/auth_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_tag_line" />

</android.support.constraint.ConstraintLayout>
