<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.RegisterActivity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_bar_layout" />

    <TextView
        android:id="@+id/register_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"

        android:text="@string/create_a_new_account"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="58sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/register_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_avatar"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/vegeta"
        app:layout_constraintBottom_toTopOf="@+id/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_header_text"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="1dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/register_email_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_avatar">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_rect_button"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/username"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/colorAccent"
            android:singleLine="true"
            android:textColor="@color/dark_pink"
            android:textColorHint="#5A1414"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_id"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="18dp"
        android:textColorHint="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_rect_button"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/colorAccent"
            android:singleLine="true"
            android:textColor="@color/dark_pink"
            android:textColorHint="@color/dark_pink"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/dark_pink"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_id">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_height"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_rect_button"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:shadowColor="@color/colorAccent"
            android:singleLine="true"
            android:textColor="@color/dark_pink"
            android:textColorHint="@color/dark_pink"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_rect_button_border"
        android:fontFamily="sans-serif-black"

        android:text="@string/register_action"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/register_progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <ProgressBar
        android:id="@+id/register_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#9C27B0"
        android:foregroundTint="#9C27B0"
        android:indeterminateTint="#9C27B0"
        android:progressTint="#9C27B0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

</android.support.constraint.ConstraintLayout>
